# efs

./: CMakeLists.txt
client/: CMakeLists.txt
client/src/: main.cpp
comm/: client.hpp  server.hpp
server/: CMakeLists.txt
server/src/: main.cpp
utils/log/: logger.hpp
utils/nn/: nn.hpp
